_build/_log
### Starting build.
# Target: test.ml.depends, tags: { package(ANSITerminal), package(ounit2), debug, extension:ml, file:test.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package ounit2 -package ANSITerminal -modules test.ml > test.ml.depends
# Target: manual.mli.depends, tags: { package(ANSITerminal), package(ounit2), debug, extension:mli, file:manual.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package ounit2 -package ANSITerminal -modules manual.mli > manual.mli.depends # cached
# Target: manual.cmi, tags: { package(ANSITerminal), package(ounit2), byte, compile, debug, extension:mli, file:manual.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -package ounit2 -package ANSITerminal -o manual.cmi manual.mli
# Target: test.cmo, tags: { package(ANSITerminal), package(ounit2), byte, compile, debug, extension:cmo, extension:ml, file:test.cmo, file:test.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -package ounit2 -package ANSITerminal -o test.cmo test.ml
+ ocamlfind ocamlc -c -g -package ounit2 -package ANSITerminal -o test.cmo test.ml
File "test.ml", line 54, characters 74-80:
54 |     create_task_test "adding task1 to General category" "General" task1 [{c_name = "General"; task_list = [{name = "watch lecture"; created_date = "10/23/20"; due_date = "10/28/20"; priority = 2}]}];
                                                                               ^^^^^^
Error: Unbound record field c_name
Command exited with code 2.
# Compilation unsuccessful.
